convert to Ivy 12

--- a/idp-connector-demo/src_hd/com/axonivy/connector/idp/connector/demo/SplittingResult/SplittingResult.xhtml
+++ b/idp-connector-demo/src_hd/com/axonivy/connector/idp/connector/demo/SplittingResult/SplittingResult.xhtml
@@ -30,7 +30,7 @@
 							<p:column headerText="Download" width="150px">
 								<p:commandButton value="Download" ajax="false"
 									onclick="PrimeFaces.monitorDownload(start, stop);"
-									icon="fa fa-download" styleClass="p-mr-2"
+									icon="fa fa-download" styleClass="mr-2"
 									update="downloadMessages">
 									<p:fileDownload value="#{logic.downloadFile(subdocIndex)}" />
 								</p:commandButton>
