--- a/idp-connector-demo/src_hd/com/axonivy/connector/idp/connector/demo/ExtractionResult/ExtractionResult.xhtml
+++ b/idp-connector-demo/src_hd/com/axonivy/connector/idp/connector/demo/ExtractionResult/ExtractionResult.xhtml
@@ -22,13 +22,13 @@
 							<p:tab title="Results" style="height:100%">
 								<div class="ui-g"  style="max-height: calc(-163px + 100vh); overflow-x: hidden; overflow-y: auto;">
 								<h:outputText value="#{ivy.cms.co('/Dialogs/com/axonivy/connector/idp/connector/demo/ExtractionResult/IntroText')}"/>
-								<div class="p-formgrid p-grid p-align-baseline ui-fluid">
+								<div class="formgrid grid align-items-baseline ui-fluid">
 									<ui:repeat var="extraction" value="#{data.extractions}">
 										<!-- row -->
-										<div class="p-field p-col-12 p-md-5 p-text-left p-text-md-right">
+										<div class="field col-12 md:col-5 p-text-left p-text-md-right">
 											<h:outputText value="#{utilsBean.snakeCaseToWords(extraction.name)}" />
 										</div>
-										<div class="p-field p-col-12 p-md-7">
+										<div class="field col-12 md:col-7">
 											<p:inputText value="#{extraction.extraction.value}" readonly="true"/>
 										</div>
 									</ui:repeat>
